# dnstest

./: .gitignore  Cargo.toml  README.md  dnslist-v6.json  dnslist.json  index.html
.github/workflows/: ci.yml  release.yml
assets/: style.css
scripts/: aur-publish-bin.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/dns/: mod.rs  pollution.rs  speedtest.rs  types.rs
src/tui/: app.rs  mod.rs
