[package]
name = "dnstest"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A modern DNS speed testing and pollution detection CLI tool"
readme = "README.md"
license = "MIT"
repository = "https://github.com/wjsoj/dnstest"
homepage = "https://github.com/wjsoj/dnstest"
keywords = ["dns", "network", "speedtest", "cli", "tui"]
categories = ["network", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Network
surge-ping = "0.8"
trust-dns-resolver = "0.22"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]

[features]
default = ["std"]
std = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Specific allowances for this project
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
unnested_or_patterns = "allow"
uninlined_format_args = "allow"
map_unwrap_or = "allow"
redundant_closure = "allow"
manual_map = "allow"
option_if_let_else = "allow"
unused_self = "allow"
match_same_arms = "allow"
print_literal = "allow"
single_match_else = "allow"
needless_pass_by_value = "allow"
missing_const_for_fn = "allow"

[lib]
name = "dnstest"
path = "src/lib.rs"

[[bin]]
name = "dnstest"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
